// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarMenuButton Snapshot Tests should match snapshot with active state 1`] = `
<button
  aria-pressed="true"
  class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left text-sm outline-hidden transition-[width,height,padding] duration-200 focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&>span:last-child]:truncate [&>svg]:w-4 [&>svg]:h-4 [&>svg]:shrink-0 hover:bg-gray-200 dark:hover:bg-gray-700 bg-blue-600 dark:bg-blue-500 text-white font-medium group-data-[collapsible=icon]:w-8 group-data-[collapsible=icon]:h-8 group-data-[collapsible=icon]:p-2 h-8 text-sm"
  data-active="true"
  data-sidebar="menu-button"
  data-size="default"
  data-slot="sidebar-menu-button"
  data-testid="sidebar-menu-button"
>
  Menu Item
</button>
`;

exports[`SidebarMenuButton Snapshot Tests should match snapshot with default props 1`] = `
<button
  aria-pressed="false"
  class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left text-sm outline-hidden transition-[width,height,padding] duration-200 focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&>span:last-child]:truncate [&>svg]:w-4 [&>svg]:h-4 [&>svg]:shrink-0 hover:bg-gray-200 dark:hover:bg-gray-700 group-data-[collapsible=icon]:w-8 group-data-[collapsible=icon]:h-8 group-data-[collapsible=icon]:p-2 h-8 text-sm"
  data-active="false"
  data-sidebar="menu-button"
  data-size="default"
  data-slot="sidebar-menu-button"
  data-testid="sidebar-menu-button"
>
  Menu Item
</button>
`;

exports[`SidebarMenuButton Snapshot Tests should match snapshot with tooltip 1`] = `
<div
  data-testid="tooltip"
>
  <div
    data-testid="tooltip-trigger"
  >
    <button
      aria-pressed="false"
      class="peer/menu-button flex w-full items-center gap-2 overflow-hidden rounded-md p-2 text-left text-sm outline-hidden transition-[width,height,padding] duration-200 focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&>span:last-child]:truncate [&>svg]:w-4 [&>svg]:h-4 [&>svg]:shrink-0 hover:bg-gray-200 dark:hover:bg-gray-700 group-data-[collapsible=icon]:w-8 group-data-[collapsible=icon]:h-8 group-data-[collapsible=icon]:p-2 h-8 text-sm"
      data-active="false"
      data-sidebar="menu-button"
      data-size="default"
      data-slot="sidebar-menu-button"
      data-testid="sidebar-menu-button"
    >
      Menu Item
    </button>
  </div>
  <div
    align="center"
    data-hidden="false"
    data-testid="tooltip-content"
    side="right"
  >
    Help
  </div>
</div>
`;
